Changelog
=========

1.0 (unreleased)
----------------

- Initial implementation.
  [hannosch]